# crouton

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build_libs.sh
.github/workflows/: build-test.yml  build.yml
ESP32/hello_world/: CMakeLists.txt
ESP32/hello_world/main/: Backtrace+ESP32.cc  CMakeLists.txt  ESPBase.cc  ESPBase.hh  ESPEventLoop.cc  ESPTCPSocket.cc  ESPTCPSocket.hh  main.cc
coro/: main.cpp
coro.xcodeproj/: project.pbxproj
coro.xcodeproj/xcshareddata/xcschemes/: Tests.xcscheme  testserver.xcscheme
crouton.xcodeproj/: project.pbxproj
crouton.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
crouton.xcodeproj/xcshareddata/xcschemes/: Tests.xcscheme  crouton.xcscheme  demo_blipclient.xcscheme  demo_client.xcscheme  demo_server.xcscheme  testclient.xcscheme  testserver.xcscheme
docs/: Awaitable Types.md  Coroutine Types.md  Errors.md  Introduction.md  PubSub.md  README.md  Results.md
include/: Actor.hh  AddrInfo.hh  AsyncFile.hh  Awaitable.hh  Base.hh  Bytes.hh  CoCondition.hh  CoroLifecycle.hh  Coroutine.hh  Crouton.hh  Error.hh  EventLoop.hh  FileStream.hh  Filesystem.hh  Future.hh  Generator.hh  HTTPClient.hh  HTTPConnection.hh  HTTPHandler.hh  HTTPParser.hh  ISocket.hh  IStream.hh  LinkedList.hh  Logging.hh  Misc.hh  NWConnection.hh  Pipe.hh  Process.hh  Producer.hh  PubSub.hh  Queue.hh  Result.hh  Scheduler.hh  Select.hh  Stream.hh  TCPServer.hh  TCPSocket.hh  Task.hh  URL.hh  UVBase.hh  (+1 more)
include/apple/: NWConnection.hh
include/io/: AddrInfo.hh  FileStream.hh  Filesystem.hh  HTTPConnection.hh  HTTPHandler.hh  HTTPParser.hh  ISocket.hh  IStream.hh  Pipe.hh  Process.hh  Stream.hh  TCPServer.hh  TCPSocket.hh  URL.hh  UVBase.hh  WebSocket.hh
include/io/apple/: NWConnection.hh
include/io/mbed/: TLSSocket.hh
include/io/mbedtls/: TLSSocket.hh
include/io/uv/: UVBase.hh
include/mbedtls/: TLSSocket.hh
include/util/: Base.hh  Bytes.hh  LinkedList.hh  Logging.hh  MiniFormat.cc  MiniFormat.hh  Relation.hh  betterassert.hh
src/: AddrInfo.cc  AsyncFile.cc  AsyncIO.cc  AsyncIO.hh  CoCondition.cc  CoroLifecycle.cc  Coroutine.cc  Coroutine.hh  Error.cc  EventLoop.hh  FileStream.cc  Filesystem.cc  Future.cc  Future.hh  Generator.hh  HTTPClient.cc  HTTPConnection.cc  HTTPHandler.cc  HTTPParser.cc  HTTPParser.hh  ISocket.cc  IStream.cc  Internal.hh  Logging.cc  NWConnection.cc  Pipe.cc  Process.cc  Scheduler.cc  Scheduler.hh  Select.cc  Stream.cc  TCPServer.cc  TCPSocket.cc  Task.hh  URL.cc  UVAwait.hh  UVBase.cc  UVBase.hh  UVInternal.hh  WebSocket.cc  (+3 more)
src/apple/: NWConnection.cc
src/blip/: BLIP.hh  BLIPConnection.cc  BLIPConnection.hh  BLIPIO.cc  BLIPIO.hh  BLIPProtocol.hh  Codec.cc  Codec.hh  Message.cc  Message.hh  MessageBuilder.cc  MessageBuilder.hh  MessageOut.cc  MessageOut.hh
src/io/: AddrInfo.cc  FileStream.cc  Filesystem.cc  HTTPConnection.cc  HTTPHandler.cc  HTTPParser.cc  ISocket.cc  IStream.cc  Pipe.cc  Process.cc  Stream.cc  TCPServer.cc  TCPSocket.cc  URL.cc  UVBase.cc  UVInternal.hh  WebSocket.cc  WebSocketProtocol.hh
src/io/apple/: NWConnection.cc
src/io/blip/: BLIP.hh  BLIPConnection.cc  BLIPConnection.hh  BLIPIO.cc  BLIPIO.hh  BLIPProtocol.hh  Codec.cc  Codec.hh  Message.cc  Message.hh  MessageBuilder.cc  MessageBuilder.hh  MessageOut.cc  MessageOut.hh  README.md
src/io/esp32/: Backtrace+ESP32.cc  CMakeLists.txt  ESPAddrInfo.cc  ESPAddrInfo.hh  ESPBase.cc  ESPBase.hh  ESPEventLoop.cc  ESPTCPSocket.cc  ESPTCPSocket.hh  README.md
src/io/mbed/: TLSContext.hh  TLSSocket.cc
src/io/mbedtls/: TLSContext.hh  TLSSocket.cc
src/io/uv/: AddrInfo.cc  FileStream.cc  Filesystem.cc  Pipe.cc  Process.cc  Stream.cc  TCPServer.cc  TCPSocket.cc  UVBase.cc  UVInternal.hh
src/mbedtls/: TLSContext.hh  TLSSocket.cc
src/support/: Backtrace+Unix.cc  Backtrace+Windows.cc  Backtrace.cc  Backtrace.hh  Defer.hh  Endian.hh  LinkedList.hh  Logging.cc  Memoized.cc  Memoized.hh  MiniFormat.cc  StringUtils.cc  StringUtils.hh  betterassert.cc
src/uv/: AddrInfo.cc  AddrInfo.hh  AsyncFile.cc  AsyncFile.hh  AsyncServer.cc  AsyncServer.hh  AsyncSocket.cc  AsyncSocket.hh  AsyncUV.hh  HTTPClient.cc  HTTPClient.hh  Pipe.cc  Pipe.hh  Scheduler+UV.cc  Stream.cc  Stream.hh  TCPServer.cc  TCPServer.hh  TCPSocket.cc  TCPSocket.hh  URL.cc  URL.hh  UVBase.cc  UVBase.hh  UVInternal.hh  WebSocket.cc  WebSocket.hh  stream_wrapper.hh  uv_stream_wrapper.hh
tests/: Info.plist  demo_blipclient.cc  demo_client.cc  demo_server.cc  test_blip.cc  test_generator.cc  test_http.cc  test_io.cc  test_pubsub.cc  testclient.cc  tests.cc  tests.hh  testserver.cc
tests/ESP32/: CMakeLists.txt  README.md  sdkconfig
tests/ESP32/main/: CMakeLists.txt  main.cc
testserver/: testclient.cc  testserver.cc
xcconfigs/: Executable.xcconfig  Project-Debug.xcconfig  Project-Release.xcconfig  Project.xcconfig  StaticLib.xcconfig  Tests.xcconfig  XcodeWarnings.xcconfig  llhttp.xcconfig  tlsuv.xcconfig
